[package]
name = "d-bank"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A ind bank smart contract."
homepage = "https://github.com/concordium/concordium-rust-smart-contracts"
repository = "https://github.com/concordium/concordium-rust-smart-contracts"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["concordium-std/std"]

[dependencies.concordium-std]
version = "0.5"
path = "../../../concordium-std"
default-features = false

[profile.release]
opt-level = 3
